rust/foxglove/src/protocol/common/server/snapshots/foxglove__websocket__ws_protocol__server__parameter_values__tests__encode_with_id.snap
---
source: rust/foxglove/src/websocket/ws_protocol/server/parameter_values.rs
expression: message_with_id()
---
{
  "op": "parameterValues",
  "parameters": [
    {
      "name": "empty"
    },
    {
      "name": "f64",
      "type": "float64",
      "value": 1.23
    },
    {
      "name": "f64[]",
      "type": "float64_array",
      "value": [
        1.23,
        4.56
      ]
    },
    {
      "name": "str",
      "value": "hello"
    },
    {
      "name": "byte[]",
      "type": "byte_array",
      "value": "ECAw"
    },
    {
      "name": "bool",
      "value": true
    }
  ],
  "id": "my-id"
}
